--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, inital-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="icon" type="image/png" href="img/techis-logo.png"></link>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -32,7 +33,25 @@
             
           </div>
         </div>
+
       </nav>
+    
+      <div id="about">
+          <h2><span class="font-primary">A</span>bout</a></h2>
+          <img src="img/sample-woman.jpg">
+          <div class="name">Tiffanie Muhammad</div>
+          <div class="vocation">Web Application Developer</div>
+          <div class="skills">HTML / CSS / Javascript / React.js / Redux / Python / Django / Express.js / AWS(Basics) / Docker(Basics)</div>
+          <p>
+            An SPA that displays subreddit data from Reddit for a specified time period. As the front-end developer, I worked many project consisting of
+          </p>
+          <div class="email">tiffanie.muh23872gmail.com</div>
+          <div class="icons">
+            <a href="#"><i class="bi bi-github"></i></a>
+            <a href="#"><i class="bi bi-linkedin ms-3"></i></a>
+          </div>
+        </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
