--- a/index.html
+++ b/index.html
@@ -52,6 +52,55 @@
           </div>
         </div>
 
+        <div id="project">
+          <h2><span class="font-primary">P</span>roject</h2> 
+
+          <div class="card mb-3">
+            <div class="row">
+              <div class="col-md-4">
+                <img src="img/cafe.png" class="Twitter Project" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Twiiter Clone</h5>
+                  <p class="card-text">This is a twitter based project made using Django.</p>
+                  <p class="card-text"><small class="text-muted">
+                    Test Login Account <br>
+                    Email : Test@gmail.com <br>
+                    Password : 1234 
+                  </small></p>
+                  <a href="#" target="blank" class="btn btn-secondary">Website Link</a>
+                  <a href="#" target="blank" class="btn btn-secondary">Github Link</a>
+                  </small></p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card mb-3">
+            <div class="row">
+              <div class="col-md-4">
+                <img src="img/project-netflix.png" class="Netflix Project" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Netflix Clone</h5>
+                  <p class="card-text">This is a Netflix based project using HTML / CSS / Javascript.</p>
+                  <p class="card-text"><small class="text-muted">
+                    Test Login Account <br>
+                    Email : Test@gmail.com <br>
+                    Password : 1234 
+                  </small></p>
+                  <a href="#" target="blank" class="btn btn-secondary">Website Link</a>
+                  <a href="#" target="blank" class="btn btn-secondary">Github Link</a>
+                  </small></p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
